# Computer-Graphics-HW

./: .gitignore
PA0-Rasterization/: README.md
PA0-Rasterization/code/: run_all.sh
PA0-Rasterization/code/include/: element.hpp
PA1-RayCasting/: README.md
PA1-RayCasting/code/: run_all.sh
PA1-RayCasting/code/include/: camera.hpp  group.hpp  material.hpp  plane.hpp  sphere.hpp  transform.hpp  triangle.hpp
PA1-RayCasting/code/src/: main.cpp
PA2-OpenGL/: README.md
PA2-OpenGL/code/: run_all.sh
PA2-OpenGL/code/include/: mesh.hpp  triangle.hpp
PA2-OpenGL/code/src/: main.cpp
PA2-OpenGL/test/: test.cpp
PA3-Curves/: README.md
PA3-Curves/code/include/: curve.hpp  group.hpp  material.hpp  plane.hpp  sphere.hpp
PA3-Curves/code/src/: main.cpp
Project/code/: CMakeLists.txt  run_all.sh
Project/code/include/: group.hpp  material.hpp
Project/code/src/: main.cpp
